--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -413,6 +413,7 @@
         <item>Dark</item>
         <item>Chocolate Brown</item>
         <item>Ocean Blue</item>
+        <item>Light Maroon</item>
     </string-array>
 
     <string-array name="theme_values">
@@ -420,6 +421,8 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
 
 </resources>
